# svo-cpu

./: Cargo.toml  LICENSE.txt  cachegrind.out  callgrind.out
examples/: main.rs
examples/models/: stanford_dragon.binvox
src/: binvox.rs  camera.rs  fb.rs  lib.rs  main.rs  stanford_bunny.binvox  voxbuf.rs
src/camera/: mod.rs  spinny_camera.rs
src/models/: stanford_buddha.binvox  stanford_bunny.binvox  stanford_dragon.binvox
src/procgen/: mod.rs  noise.rs  terrain.rs
