[package]
name = "svo-cpu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
glam = "0.18.0"
lazy_static = "1.4.0"
minifb = "0.19.3"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
rand = "0.7.3"

[profile.dev]
opt-level = 2
lto = "thin"

[profile.release]
lto = "fat"
